--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -50,19 +50,24 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          build-args: |
-            HASS_VERSION=${{ steps.vars.outputs.short_ref }}
-            ALPINE_VERSION=3.12
-          tags: |
-            failfr8er/home-assistant:${{ steps.vars.outputs.short_ref }}
-            failfr8er/home-assistant:latest
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
+      - name: Build and publish
+        id: vars
+        run: |
+          ./build.sh
+
+      # - name: Push to Docker Hub
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     push: true
+      #     build-args: |
+      #       HASS_VERSION=${{ steps.vars.outputs.short_ref }}
+      #       ALPINE_VERSION=3.12
+      #     tags: |
+      #       failfr8er/home-assistant:${{ steps.vars.outputs.short_ref }}
+      #       failfr8er/home-assistant:latest
+      #     platforms: linux/amd64,linux/arm64,linux/arm/v7
+      #     cache-from: type=local,src=/tmp/.buildx-cache
+      #     cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
 
       - name: Run Dive
         uses: yuichielectric/dive-action@0.0.4
