--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -20,9 +20,9 @@ jobs:
   build_and_publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Set vars
-        id: vars
-        run: echo ::set-output name=short_ref::${GITHUB_REF#refs/*/}
+      # - name: Set vars
+      #   id: vars
+      #   run: echo ::set-output name=short_ref::${GITHUB_REF#refs/*/}
 
       - name: Checkout repository
         uses: actions/checkout@v2
