--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -49,11 +49,13 @@ jobs:
       - name: Build and publish
         id: build_and_push
         run: |
+          set -x
           ALPINE_VERSION=3.12
           IMAGE_NAME=failfr8er/home-assistant
           HASS_RAW=$(curl -H "Accept: application/vnd.github.v3+json" -s https://api.github.com/repos/home-assistant/core/releases/latest)
           HASS_VERSION=$(echo "${HASS_RAW}" | jq -r '.tag_name')
 
+          echo "Building and pushing Home Assistant ${HASS_VERSION}"
           echo "::set-output name=HASS_VERSION::${HASS_VERSION}"
 
           docker buildx build \
